--- a/app.yaml
+++ b/app.yaml
@@ -7,10 +7,17 @@ handlers:
   static_files: www/index.html
   upload: www/index.html
 
+- url: /about
+  static_files: www/about.html
+  upload: www/about.html
+
 - url: /contact
   static_files: www/contact.html
   upload: www/contact.html
 
-- url: /about
-  static_files: www/about.html
-  upload: www/about.html
+- url: /(.*)
+  static_files: www/\1
+  upload: www/(.*)
+
+skip_files:
+  - vendor/
