--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,9 @@ api_version: 1
 threadsafe: true
 
 handlers:
+- url: /favicon\.ico
+  static_files: static/img/favicon.ico
+  upload: static/img/favicon\.ico
 - url: /static
   static_dir: static
 - url: /.*
