--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,35 @@
+amqp==2.3.2
+billiard==3.5.0.3
+cachetools==2.1.0
+celery==4.2.0
+certifi==2018.4.16
+chardet==3.0.4
+click==6.7
 Flask==0.12.2
-Werkzeug<0.13.0,>=0.12.0
+gdata==2.0.18
+google-api-python-client==1.7.3
+google-auth==1.5.0
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.2.0
+gspread==3.0.1
+httplib2==0.11.3
+idna==2.7
+itsdangerous==0.24
+Jinja2==2.10
+kombu==4.2.1
+MarkupSafe==1.0
+oauth2client==4.1.2
+oauthlib==2.1.0
+protobuf==3.6.0
+pyasn1==0.4.3
+pyasn1-modules==0.2.2
+pytz==2018.5
+requests==2.19.1
+requests-oauthlib==1.0.0
+rsa==3.4.2
+sasl==0.2.1
+six==1.11.0
+uritemplate==3.0.0
+urllib3==1.23
+vine==1.1.4
+Werkzeug==0.12.2
