--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 amqp==2.3.2
 billiard==3.5.0.3
+blinker==1.4
 cachetools==2.1.0
 celery==4.2.0
 certifi==2018.4.16
 chardet==3.0.4
 click==6.7
 Flask==0.12.2
+Flask-Email==1.4.4
+Flask-Mail==0.9.1
 gdata==2.0.18
 google-api-python-client==1.7.3
 google-auth==1.5.0
@@ -26,6 +29,7 @@ pyasn1-modules==0.2.2
 pytz==2018.5
 requests==2.19.1
 requests-oauthlib==1.0.0
+requests-toolbelt==0.8.0
 rsa==3.4.2
 sasl==0.2.1
 six==1.11.0
