--- a/app.yaml
+++ b/app.yaml
@@ -1,25 +1,6 @@
-runtime: python27
-api_version: 1
-threadsafe: false
+runtime: python
+env: flex
+entrypoint: gunicorn -b :$PORT main:application
 
-libraries:
-- name: ssl
-  version: latest
-
-handlers:
-- url: /favicon\.ico
-  static_files: static/img/favicon.ico
-  upload: static/img/favicon\.ico
-- url: /static
-  static_dir: static
-- url: /.*
-  script: main.app
-
-skip_files:
-  - ^env$
-  - ^\.git/.*
-  - ^(.*/)?#.*#$
-  - ^(.*/)?.*~$
-  - ^(.*/)?.*\.py[co]$
-  - ^(.*/)?.*/RCS/.*$
-  - ^(.*/)?\..*$
+runtime_config:
+  python_version: 2
