--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2018.4.16
 chardet==3.0.4
 click==6.7
 Flask==1.0.2
+Flask-SSLify==0.1.5
 google-api-python-client==1.7.4
 google-auth==1.5.1
 google-auth-httplib2==0.0.3
