--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-SSLify==0.1.5
 google-api-python-client==1.7.4
 google-auth==1.5.1
 google-auth-httplib2==0.0.3
+gunicorn==19.9.0
 httplib2==0.11.3
 idna==2.7
 itsdangerous==0.24
